<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        style="@style/QuestionTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/respiratory_rate" />

    <TextView
        style="@style/QuestionSubtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/manual_input" />

    <EditText
        android:id="@+id/EditText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breaths_per_minute" />

    <Button
        android:id="@+id/SubmitButton"
        style="@style/primaryButtonStyle"
        android:layout_marginTop="60dp"
        android:text="@string/submit_text" />
</LinearLayout>